--- a/src/pages/Home/Sections/Team/Team.module.css
+++ b/src/pages/Home/Sections/Team/Team.module.css
@@ -29,7 +29,7 @@
   justify-content: space-between;
 }
 .flexItem {
-  flex-basis: 30%;
+  flex-basis: 23%;
   /* height: 600px; */
 }
 .founderAvatar {
